[NF] splitValuesByIntervalsTest was added and partitioning fixed